fix: replace hardcoded Gemini key with env-var; use Java 21 .toList()